# Js_Engine

./: .gitignore  CMakeLists.txt  CMake_Build_Debug_Proxy.ps1  CMake_Build_Proxy.ps1  CMake_Build_Release_Proxy.ps1  README.md  XMake_Build_Release_Proxy.ps1  package-lock.json  package.json  xmake.lua
.github/workflows/: build.yml
patch/: 0001-fix-patch-to-cxx20-and-use-xmake-toolchain.patch  block_data.h  cxx20.patch  plugin.h  plugin_manager.h  scheduler.h  thread_pool_executor.h
src/: Entry.cc  Entry.h  NodeHelper.h  Using.h
src/API/: APIHelper.cc  APIHelper.h  EndStoneAPI.cc  EndStoneAPI.h  JSEAPI.cc  JSEAPI.h  LoggerAPI.cc  LoggerAPI.h  PluginAPI.cc  PluginAPI.h
src/Engine/: BindAPI.h  EngineManager.cc  EngineManager.h  EngineSelfData.h
src/Loader/: JavaScriptPlugin.cc  JavaScriptPlugin.h  JavaScriptPluginLoader.cc  JavaScriptPluginLoader.h
src/Node/: CustomConvert.h  NodeHelper.h  UsingV8.h
src/Utils/: Util.h
test/: TestLoader.js  TestNodeEngine.js  b.js  package.json
types/: EndStoneAPI.d.ts  LoggerAPI.d.ts  index.d.ts
